public/assets/css/style.css
/* ... */
#hero a:hover {
    background: #2b96c7;
    border: 0;
    color: #fff;
    border-radius: 4px;
    margin-top: 20px;
}

@media (min-width: 1024px) {
    #hero {
        background-attachment: fixed;
    }
}

@media (max-width: 768px) {
    #hero h1 {
        font-size: 28px;
        line-height: 36px;
    }

    #hero h2 {
        font-size: 18px;
        line-height: 24px;
        margin-bottom: 30px;
    }
}

/*--------------------------------------------------------------
# Sections General
--------------------------------------------------------------*/
section {
    padding: 60px 0;
    overflow: hidden;
}

.section-title {
    padding-bottom: 30px;
}

.section-title h2 {
    font-size: 32px;
    font-weight: bold;
    margin-bottom: 20px;
    padding-bottom: 20px;
    position: relative;
    color: #ffffff;
}

.section-title h2::after {
    content: "";
    position: absolute;
    display: block;
    width: 50px;
    height: 3px;
    background: #27272b;
    bottom: 0;
    left: 0;
}

.section-title p {
    margin-bottom: 0;
}

/*--------------------------------------------------------------
# About
--------------------------------------------------------------*/
.about {
    background: #1f1e1e;
    color: #fff;
    font-family: "Rubik", monospace;
    font-weight: 300;
}

.about .content h4 {
    font-weight: 700;
    font-size: 26px;
    color: #ffffff;
}

.about .content ul {
    list-style: none;
    padding: 0;
}

.about .content ul li {
    margin-bottom: 20px;
    display: flex;
    align-items: center;
}

.about .content ul strong {
    margin-right: 10px;
    font-weight: bold;
}

.about .content ul i {
    font-size: 16px;
    margin-right: 5px;
    color: #149ddd;
    line-height: 0;
}

.about .content p:last-child {
    margin-bottom: 0;
}

.about a {
    background: #149ddd;
    border: 0;
    padding: 10px 24px;
    color: #fff;
    border-radius: 4px;
    margin-top: 20px;
}

.about a:hover {
    background: #2b96c7;
    border: 0;
    padding: 10px 24px;
    color: #fff;
    border-radius: 4px;
    margin-top: 20px;
}

/*--------------------------------------------------------------
# Skills
--------------------------------------------------------------*/
.skills {
    background: #1f1e1e;
    color: #fff;
    font-family: "Rubik", monospace;
    font-weight: 300;
}

.skills .progress {
    height: 60px;
    display: block;
    background: none;
    border-radius: 0;
}

.skills .progress .skill {
    padding: 0;
    margin: 0 0 6px 0;
    text-transform: uppercase;
    display: block;
}

.skills .progress .skill .val {
    float: right;
    font-style: normal;
}

.skills .progress-bar-wrap {
    background: #dce8f8;
    height: 10px;
}

.skills .progress-bar {
    width: 1px;
    height: 10px;
    transition: 0.9s;
    background-color: #149ddd;
}

/*--------------------------------------------------------------
# Experiences
--------------------------------------------------------------*/
@import url('https://fonts.googleapis.com/css?family=Fira+Sans:400,500,600,700,800');

.experiences {
    width: 100%;
    color: #fff;
    font-family: "Rubik", monospace;
    font-weight: 300;
    background-color: #1f1e1e;
    min-height: 100vh;
}

.blog-slider {
    width: 95%;
    position: relative;
    max-width: 800px;
    margin: auto;
    background: #040122;
    color: #fff;
    box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
    padding: 25px;
    border-radius: 25px;
    height: 400px;
    transition: all 0.3s;
}

@media screen and (max-width: 992px) {
    .blog-slider {
        max-width: 680px;
        height: 400px;
    }
}

@media screen and (max-width: 768px) {
    .blog-slider {
        min-height: 500px;
        height: auto;
        margin: 180px auto;
    }
}

@media screen and (max-height: 500px) and (min-width: 992px) {
    .blog-slider {
        height: 350px;
    }
}

.blog-slider__item {
    display: flex;
    align-items: center;
}

@media screen and (max-width: 768px) {
    .blog-slider__item {
        flex-direction: column;
    }
}

.blog-slider__item.swiper-slide-active .blog-slider__img img {
    opacity: 1;
    transition-delay: 0.3s;
}

.blog-slider__item.swiper-slide-active .blog-slider__content>* {
    opacity: 1;
    transform: none;
}

.blog-slider__item.swiper-slide-active .blog-slider__content>*:nth-child(1) {
    transition-delay: 0.3s;
}

.blog-slider__item.swiper-slide-active .blog-slider__content>*:nth-child(2) {
    transition-delay: 0.4s;
}

.blog-slider__item.swiper-slide-active .blog-slider__content>*:nth-child(3) {
    transition-delay: 0.5s;
}

.blog-slider__item.swiper-slide-active .blog-slider__content>*:nth-child(4) {
    transition-delay: 0.6s;
}

.blog-slider__item.swiper-slide-active .blog-slider__content>*:nth-child(5) {
    transition-delay: 0.7s;
}

.blog-slider__item.swiper-slide-active .blog-slider__content>*:nth-child(6) {
    transition-delay: 0.8s;
}

.blog-slider__item.swiper-slide-active .blog-slider__content>*:nth-child(7) {
    transition-delay: 0.9s;
}

.blog-slider__item.swiper-slide-active .blog-slider__content>*:nth-child(8) {
    transition-delay: 1s;
}

.blog-slider__item.swiper-slide-active .blog-slider__content>*:nth-child(9) {
    transition-delay: 1.1s;
}

.blog-slider__item.swiper-slide-active .blog-slider__content>*:nth-child(10) {
    transition-delay: 1.2s;
}

.blog-slider__item.swiper-slide-active .blog-slider__content>*:nth-child(11) {
    transition-delay: 1.3s;
}

.blog-slider__item.swiper-slide-active .blog-slider__content>*:nth-child(12) {
    transition-delay: 1.4s;
}

.blog-slider__item.swiper-slide-active .blog-slider__content>*:nth-child(13) {
    transition-delay: 1.5s;
}

.blog-slider__item.swiper-slide-active .blog-slider__content>*:nth-child(14) {
    transition-delay: 1.6s;
}

.blog-slider__item.swiper-slide-active .blog-slider__content>*:nth-child(15) {
    transition-delay: 1.7s;
}
/* ... */

